<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">i\'m Watch Numpad</string>

    <!-- Numpad button labels -->
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnCanc">Canc</string>
    <string name="btnZero">0</string>
    <string name="btnCall">Call</string>
</resources>